tests/negative/semantic/array_insert_int_into_bool/input.ci
void main() {
    bool[] xs = [true];
    arrayInsert(xs, 0, 1);
}
